Skeleton site built

--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
-<h1>Hello, World!</h1>
-<h2>My name is Louise</h2>
-<h3>Welcome to my portfolio.</h3>
-<p>Here, I'm collecting work I've done and what it's meant to me.</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta charset="utf-8">
+        <title>Louise Jones</title>
+    </head>
+
+    <body>
+        <header>
+            <h1>
+                Hi, I'm Louise.
+            </h1>
+        </header>
+
+        <main class="homepage">
+            <img id="arrow" src="images/arrow.png" />
+            <h3>
+                This is me!
+            </h3>
+        </main>
+
+        <footer>
+            &copy; Louise Jones 2023
+            <ul>
+                <li><a href="work.html"><img class="social" src="images/portfolio.png" /></li></a>
+                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" /></li></a>
+                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" /></li></a>
+            </ul>
+        </footer>
+    </body>
+</html>
