Fixed the image backgrounds

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
 
         <main class="homepage">
-            <img id="arrow" src="images/arrow.png" />
+            <img id="arrow" src="images/arrow.png" alt = "Curly arrow pointing to a photo of Louise"/>
             <h3>
                 This is me!
             </h3>
@@ -23,9 +23,9 @@
         <footer>
             &copy; Louise Jones 2023
             <ul>
-                <li><a href="work.html"><img class="social" src="images/portfolio.png" /></li></a>
-                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" /></li></a>
-                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" /></li></a>
+                <li><a href="work.html"><img class="social" src="images/portfolio.png" alt="Portfolio logo"/></a></li>
+                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" alt="'LinkedIn logo"/></a></li>
+                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" alt="GitHub logo"/></a></li>
             </ul>
         </footer>
     </body>
