--- a/work.html
+++ b/work.html
@@ -14,33 +14,33 @@
         </header>
 
         <main class="portfolio">
-            <img id="climbing" src="images/climbing.jpg" />
+            <img id="climbing" src="images/climbing.png" alt="Woman climbing stairs" />
             <div class="portfolio-item item-one">
-                This portfolio website!
+                <p>This portfolio website!</p>
             </div>
             <div class="portfolio-item item-two">
-                <img src="images/locked.png">
+                <img src="images/locked.png" alt="A locked lock">
             </div>
             <div class="portfolio-item item-three">
-                <img src="images/locked.png">
+                <img src="images/locked.png" alt="A locked lock">
             </div>
             <div class="portfolio-item item-four">
-                <img src="images/locked.png">
+                <img src="images/locked.png" alt="A locked lock">
             </div>
             <div class="portfolio-item item-five">
-                <img src="images/locked.png">
+                <img src="images/locked.png" alt="A locked lock">
             </div>
             <div class="portfolio-item item-six">
-                <img src="images/locked.png">
+                <img src="images/locked.png" alt="A locked lock">
             </div>
         </main>
         
         <footer>
             &copy; Louise Jones 2023
             <ul>
-                <li><a href="index.html"><img class="social" src="images/home.png" /></li></a>
-                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" /></li></a>
-                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" /></li></a>
+                <li><a href="index.html"><img class="social" src="images/home.png" alt = "Home logo"/></a></li>
+                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" alt="'LinkedIn logo"/></a></li>
+                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" alt="GitHub logo"/></a></li>
             </ul>
         </footer>
     </body>
