--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
         <meta charset="utf-8">
         <title>Louise Jones</title>
+        <script src="https://kit.fontawesome.com/786fe5a83c.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -11,6 +12,13 @@
             <h1>
                 Hi, I'm Louise.
             </h1>
+            <nav>
+                <ul>
+                    <li><a href="work.html"><img class="social" src="images/portfolio.png" alt="Portfolio logo"/></a></li>
+                    <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" alt="'LinkedIn logo"/></a></li>
+                    <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" alt="GitHub logo"/></a></li>
+                </ul>
+            </nav>
         </header>
 
         <main class="homepage">
@@ -22,11 +30,6 @@
 
         <footer>
             &copy; Louise Jones 2023
-            <ul>
-                <li><a href="work.html"><img class="social" src="images/portfolio.png" alt="Portfolio logo"/></a></li>
-                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" alt="'LinkedIn logo"/></a></li>
-                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" alt="GitHub logo"/></a></li>
-            </ul>
         </footer>
     </body>
 </html>
