--- a/work.html
+++ b/work.html
@@ -4,10 +4,16 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
         <meta charset="utf-8">
         <title>Louise's Work</title>
+        <script src="https://kit.fontawesome.com/786fe5a83c.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
+            <nav>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+                <a href="https://linkedin.com/in/louisejones94"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/louisejones94"><i class="fa-brands fa-github"></i></a>
+            </nav>
             <h1>
                 Portfolio
             </h1>
@@ -37,11 +43,6 @@
         
         <footer>
             &copy; Louise Jones 2023
-            <ul>
-                <li><a href="index.html"><img class="social" src="images/home.png" alt = "Home logo"/></a></li>
-                <li><a href="https://linkedin.com/in/louisejones94"><img class="social" src="images/linkedinlogo.png" alt="'LinkedIn logo"/></a></li>
-                <li><a href="https://github.com/louisejones94"><img class="social" src="images/githublogo.png" alt="GitHub logo"/></a></li>
-            </ul>
         </footer>
     </body>
 </html>
